--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
  <h1>My First Heading</h1>
  <p id="clickable">My first paragraph.</p>
+ <a href="profile.html"> My profile </a>
 </body>
 
 <script src="script.js">
