--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
- <h1>My First Heading</h1>
- <p id="clickable">My first paragraph.</p>
- <a href="profile.html"> My profile </a>
+ <h1>My Handsome Pooch</h1>
+ <p id="clickable">Noah's birthday is next week!</p>
+ <a href="profile.html"> Pictures </a>
 </body>
 
 <script src="script.js">
