--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
 <body>
  <h1>Profile</h1>
  <p>I am Hannah.</p>
+ <img src="https://drive.google.com/file/d/1uAMUOVUnF3cYHa9DN75LR9LuTFJcdj3z/view?usp=drivesdk" alt="Noah having a wee on the beach">
 </body>
 
 <script src="script.js">
