--- a/profile.html
+++ b/profile.html
@@ -5,8 +5,8 @@
  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
- <h1>Profile</h1>
- <p>I am Hannah.</p>
+ <h1>Pictures</h1>
+ <p>Lovely pictures of Noah</p>
  <img src="https://drive.google.com/file/d/1uAMUOVUnF3cYHa9DN75LR9LuTFJcdj3z/view?usp=drivesdk" alt="Noah having a wee on the beach">
 </body>
 
