--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 <body>
  <h1>Pictures</h1>
  <p>Lovely pictures of Noah</p>
- <img url(https://drive.google.com/file/d/1uAMUOVUnF3cYHa9DN75LR9LuTFJcdj3z/view?usp=drivesdk) alt="Noah having a wee on the beach">
+ <img src="noah_beach.jpg" alt="Noah having a wee on the beach">
 </body>
 
 <script src="script.js">
