--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 <body>
  <h1>Pictures</h1>
  <p>Lovely pictures of Noah</p>
- <img src="noah_beach.jpg" alt="Noah having a wee on the beach">
+ <img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach">
 </body>
 
 <script src="script.js">
