--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,8 @@
  <h1>Pictures</h1>
  <p>Lovely pictures of Noah</p>
  <img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach">
- <img class="img-cd" src="Noah.jpg" alt="Noah in Castle Donington">
- <img class="img-dino" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
+ <img class="img-beach" src="Noah.jpg" alt="Noah in Castle Donington">
+ <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
 </body>
 
 <script src="script.js">
