--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,11 @@
  <h1>Pictures</h1>
  <p>Lovely pictures of Noah</p>
  <img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach">
+ <p>Noah having a wee on the beach</p>
  <img class="img-beach" src="Noah.jpg" alt="Noah in Castle Donington">
+ <p>Noah in Castle Donington</p>
  <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
+ <p>Noah in his Dino pyjamas</p>
 </body>
 
 <script src="script.js">
