--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
  <h1>My Handsome Pooch</h1>
- <p id="clickable">Noah's birthday is next week!</p>
- <a href="profile.html"> Pictures </a>
+ <button id="clickable">Noah's birthday is next week! Say Happy Birthday!</button>
+ <a href="profile.html"> See Pictures of Noah </a>
 </body>
 
 <script src="script.js">
