--- a/profile.html
+++ b/profile.html
@@ -7,15 +7,24 @@
 <body>
  <h1>Pictures</h1>
  <p>Noah's first toy</p>
- <img class="img-beach" src="noah_toy.jpg" alt="Noah on his throne">
+ <img class="img-beach" src="noah_toy.jpg" alt="Noah's first toy">
+ 
+ 
  <p>Noah on his throne</p>
  <img class="img-beach" src="noah_smiler.jpg" alt="Noah on his throne">
+ 
+ 
  <p>Noah having a wee on the beach</p>
  <img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach">
+ 
+ 
  <p>Noah in his Dino pyjamas</p>
  <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
+ 
+ 
  <p>Noah before and after</p>
  <img class="img-beach" src="noah_before_after.jpg" alt="Noah before and after">
+ 
 </body>
 
 <script src="script.js">
