--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Hannah</title>
+ <title>Noah's blog</title>
  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
