--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
  <h1>My Handsome Pooch</h1>
  <a href="profile.html"> See Pictures of Noah </a>
- <p<button id="clickable">Noah's birthday is next week! Say Happy Birthday!</button>/p>
+ <p><button id="clickable">Noah's birthday is next week! Say Happy Birthday!</button></p>
 </body>
 
 <script src="script.js">
