--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,9 @@
  <p></p>
  <p>Noah in his Dino pyjamas</p>
  <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
+  <p></p>
+ <p>Noah's first Eurovision</p>
+ <img class="img-beach" src="noah_eurovision.jpg" alt="Noah's first Eurovision">
  
 </body>
 
