--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
  <p>Noah having a wee on the beach</p>
  <img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach">
  <p></p>
- <p>Noah in his Dino pyjamas</p>
+ <p>Noah in his dinosaur pyjamas</p>
  <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
   <p></p>
  <p>Noah's first Eurovision</p>
