--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
  <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
   <p></p>
  <p>Noah's first Eurovision</p>
- <img class="img-beach" src="noah_eurovision.jpg" alt="Noah's first Eurovision">
+ <img class="img-beach" src="noah_eurovision.jpeg" alt="Noah's first Eurovision">
  
 </body>
 
