--- a/profile.html
+++ b/profile.html
@@ -7,20 +7,15 @@
 <body>
  <h1>Pictures</h1>
  <p>Noah's first toy</p>
- <img class="img-beach" src="noah_toy.jpg" alt="Noah's first toy">
- <p></p>
+ <div class="img-wrapper"><img class="img-beach" src="noah_toy.jpg" alt="Noah's first toy"></div>
  <p>Noah on his throne</p>
- <img class="img-beach" src="noah_smiler.jpg" alt="Noah on his throne">
- <p></p>
+ <div class="img-wrapper"><img class="img-beach" src="noah_smiler.jpg" alt="Noah on his throne"></div>
  <p>Noah having a wee on the beach</p>
- <img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach">
- <p></p>
+ <div class="img-wrapper"><img class="img-beach" src="noah_beach.jpg" alt="Noah having a wee on the beach"></div>
  <p>Noah in his dinosaur pyjamas</p>
- <img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas">
-  <p></p>
+ <div class="img-wrapper"><img class="img-beach" src="noah_dinosaur.jpg" alt="Noah in his Dino pyjamas"></div>
  <p>Noah's first Eurovision</p>
- <img class="img-euro" src="noah_eurovision.jpeg" alt="Noah's first Eurovision">
- 
+ <div class="img-wrapper"><img class="img-euro" src="noah_eurovision.jpeg" alt="Noah's first Eurovision"></div>
 </body>
 
 <script src="script.js">
